updated config for ci

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
     "@shelex/cypress-allure-plugin": "^2.34.0",
+    "allure-commandline": "^2.18.1",
     "cypress": "^10.9.0"
   },
   "scripts": {
